crates/model/tests/compile_fail/entity_attributes_and_events.rs
// entity! cannot have both attributes and events on a non-resource-group.
quent_model::entity! {
    Bad {
        attributes: {
            x: u64,
        },
        events: {
            a: (),
        },
    }
}

fn main() {}
